final swagger settings
