# src/server/routes/create-completion.ts
@@ -12,6 +12,7 @@ export const createCompletionRoute: FastifyPluginAsyncZod = async app => {
       onRequest: [authenticateUserHook],
       schema: {
         tags: ['goals'],
+        operationId: 'createCompletion',
         description: 'Complete a goal',
         body: z.object({
           goalId: z.string(),
