# src/server/routes/get-user-experience-and-level.ts
@@ -12,6 +12,7 @@ export const getUserExperienceAndLevelRoute: FastifyPluginAsyncZod =
         onRequest: [authenticateUserHook],
         schema: {
           tags: ['users', 'gamification'],
+          operationId: 'getUserExperienceAndLevel',
           description: 'Get user experience and level',
           response: {
             200: z.object({
